--- a/OculusGooglePhotos-Web/public/style.css
+++ b/OculusGooglePhotos-Web/public/style.css
@@ -24,8 +24,14 @@ h2 {
 	margin-bottom: 4vh;
 }
 
+#logo {
+	border-radius: 20px;
+	max-height: 15vh;
+	margin-bottom: 5vh;
+}
+
 #link-box {
-	padding: 5vw;
+	padding: 2vw;
 	border-radius: 15px;
 	text-align: center;
 	box-shadow: 0 0 20px 0 #000000AA;
