--- a/OculusGooglePhotos-Web/public/style.css
+++ b/OculusGooglePhotos-Web/public/style.css
@@ -17,11 +17,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
 	font-size: 4vh;
-	margin-bottom: 8vh;
 }
 h2 {
 	font-size: 3vh;
-	margin-bottom: 4vh;
 }
 
 #logo {
@@ -30,11 +28,22 @@ h2 {
 	margin-bottom: 5vh;
 }
 
+#subtitle {
+	margin-top: 2vh;
+	font-size: 2vh;
+	margin-bottom: 7vh;
+}
+
 #link-box {
-	padding: 2vw;
+	padding: 1.5vw;
 	border-radius: 15px;
 	text-align: center;
 	box-shadow: 0 0 20px 0 #000000AA;
+	margin-bottom: 7vh;
+}
+#link-box h2 {
+	font-size: 2.5vh;
+	margin-bottom: 2vh;
 }
 #link-box > div {
 	/* start out the page with all steps hidden, they are controlled by JS */
@@ -50,14 +59,14 @@ h2 {
 }
 
 #code-entry-container button {
-	font-size: 40px;
+	font-size: 20px;
 	background: none;
 	border: none;
 	background-color: var(--accent-color);
 	color: #FFFFFF;
 	border-radius: 50%;
-	width: 60px;
-	height: 60px;
+	width: 40px;
+	height: 40px;
 	cursor: pointer;
 }
 
@@ -66,8 +75,8 @@ h2 {
 }
 
 #code-entry {
-	padding: 20px;
-	font-size: 20px;
+	padding: 10px;
+	font-size: 15px;
 	border: 3px solid var(--accent-color);
 	border-radius: 5px;
 	font-family: "Lexend", sans-serif;
@@ -116,4 +125,23 @@ h2 {
 #error {
 	color: #FF0000;
 	font-size: 15px;
+}
+
+#list-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 7vh;
+}
+#list-container > ul {
+	font-size: 2vh;
+	text-align: left;
+}
+
+#footer {
+	font-size: 1.5vh;
+}
+#footer a {
+	text-decoration: underline;
+	color: inherit;
 }
